# ai-secretary

./: .gitignore  LICENSE  README.md  activate_venv.bat  activate_venv.ps1  pyproject.toml  requirements.txt  server_launcher.bat  server_react.py  setup.py  start.bat  start_react.bat
SubstrateDataExtraction/: .gitignore  MORE_INFO.md  README.md  daily_extract.py  delete_teams_messages.py  fetch_all_emails.py  fetch_all_meetings.py  fetch_all_teams_messages.py  get_collaborator_teams_threads.py  get_token.ps1  get_top_collaborators.py  get_user_profile.py  install_python.ps1  m365_extractor.py  main.py  requirements.txt  run_daily.bat  start_monitor.bat  test_meeting_data_scrape.py  tokenGenerator.py  transcript_monitor.py
ai_secretary_core/: __init__.py  json_io.py  paths.py  pipeline_state.py  recent_focus.py  todo_dedup.py
browser_extension/: README.md  background.js  content.js  manifest.json  options.html  popup.css  popup.html  popup.js
config/: pipeline_config.default.json  scoring_system.default.json  topics.json
docs/: getting-started.md  powershell_install_python.txt
frontend/: .eslintrc.yml  README.md  index.html  package-lock.json  package.json  vite.config.ts
lib/: ai_utils.py  copilot_auth.py  pipeline_config_manager.py  task_vectorization.py
outlook_v2/: __init__.py  action_extraction_guide.md  action_validation_guide.md  ai_dedup_events.py  ai_dedup_todos.py  ai_extract_actions.py  ai_extract_events.py  ai_validate_actions.py  event_deduplication_guide.md  event_extraction_guide.md  event_relationship_guide.md  process_threads.py
(+71 files in other folders)
